# oscillator-pysindy

./: .gitignore  README.md  setup.cfg
examples/: oscillator.py
oscisindy/: __init__.py  _version.py  core.py  data_generation.py  ode.py
tests/: test_core.py  test_version.py
