[metadata]
name = oscisindy
version = 0.1.0
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Letting PySindy estimate the solution to oscillator problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/oscillator-pysindy
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = >=3.8, <=3.9
include_package_data = True
install_requires =
    numpy
    pysindy
    h5py>=3.7.0
    matplotlib>=3.5.2
    scipy


[options.extras_require]
test =
    pytest
    pytest-cov
    pylint


[tool:pytest]
python_files = test_*.py
testpaths = tests